--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,13 +6,13 @@
 #    By: sadoming <sadoming@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/10 17:01:41 by sadoming          #+#    #+#              #
-#    Updated: 2025/09/16 13:45:38 by sadoming         ###   ########.fr        #
+#    Updated: 2025/09/16 20:06:57 by sadoming         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	:=	PmergeMe
 
-INPUT	:=	3 8 1 0 2 5 7 3 1 4 9
+INPUT	:=	3 8 1 0 2 5 7 4 9
 # ------------------ #
 # Flags:
 
@@ -117,6 +117,8 @@ test: $(NAME)
 	@./$(NAME) 2 6 3 9 1 7
 	@echo "5 10 7 2 6 4 9 3 8"
 	@./$(NAME) 5 10 7 2 6 4 9 3 8
+	@echo "3 8 1 10 2 5 7 4 9 0 12"
+	@./$(NAME) 3 8 1 10 2 5 7 4 9 0 12
 	@echo $(INPUT)
 	@./$(NAME) $(INPUT)
 	@echo "$(C) Thats all!! $(DEF)"
